--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
-<!-- <h2>My Heroes</h2> -->
+<h2>My Games</h2>
 <ul class="heroes">
   <li *ngFor="#hero of heroes"
     [class.selected]="hero === selectedHero"
