CHANGED ALL HEROES TO GAMES

--- a/app/games.component.css
+++ b/app/games.component.css
@@ -2,13 +2,13 @@
   background-color: #CFD8DC !important;
   color: white;
 }
-.heroes {
+.games {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 10em;
 }
-.heroes li {
+.games li {
   cursor: pointer;
   position: relative;
   left: 0;
@@ -19,19 +19,19 @@
   border-radius: 4px;
   width: 500px;
 }
-.heroes li.selected:hover {
+.games li.selected:hover {
   color: white;
 }
-.heroes li:hover {
+.games li:hover {
   color: #607D8B;
   background-color: #EEE;
   left: .1em;
 }
-.heroes .text {
+.games .text {
   position: relative;
   top: -3px;
 }
-.heroes .badge {
+.games .badge {
   display: inline-block;
   font-size: small;
   color: white;
