--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Top Games</h3>
 <div class="grid grid-pad">
-    <div *ngFor="#hero of heroes" (click)="gotoDetail(hero)" class="col-1-4" >
-        <div class="module hero">
-            <h4>{{hero.name}}</h4>
+    <div *ngFor="#game of games" (click)="gotoDetail(game)" class="col-1-4" >
+        <div class="module game">
+            <h4>{{game.name}}</h4>
         </div>
     </div>
 </div>
