changed file names and contents from 'detail' to 'form'

--- a/app/game-form.component.html
+++ b/app/game-form.component.html
@@ -1,13 +1,14 @@
-<div *ngIf="game">
+<h2>This shows the game results </h2>
+<!-- <div *ngIf="game">
   <h2>How to play {{game.name}}</h2>
   <div>
     {{game.description}}
-  </div>
+  </div> -->
   <!-- <div>
     <label>id: </label>{{game.id}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="game.name" placeholder="name" />
   </div> -->
-  <button (click)="goBack()">Back</button>
-</div>
+  <!-- <button (click)="goBack()">Back</button>
+</div> -->
