--- a/app/games.component.html
+++ b/app/games.component.html
@@ -11,5 +11,5 @@
   <h2>
     {{selectedGame.name | uppercase}} is my game
   </h2>
-  <button (click)="gotoDetail()">View Details</button>
+  <button (click)="gotoForm()">View Forms</button>
 </div>
