--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Games</h3>
 <div class="grid grid-pad">
-    <div *ngFor="#game of games" (click)="gotoDetail(game)" class="col-1-4" >
+    <div *ngFor="#game of games" (click)="gotoForm(game)" class="col-1-4" >
         <div class="module game">
             <h4>{{game.name}}</h4>
         </div>
