--- a/app/game-form.component.html
+++ b/app/game-form.component.html
@@ -12,3 +12,25 @@
   </div> -->
   <!-- <button (click)="goBack()">Back</button>
 </div> -->
+
+<div class="container">
+    <h1>Find a Game</h1>
+    <form>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="alterEgo">Alter Ego</label>
+        <input type="text" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="equipment">Equipment</label>
+        <select class="form-control" required>
+          <option *ngFor="#e of equipment" [value]="e">{{e}}</option>
+        </select>
+      </div>
+
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
