--- a/app/game-form.component.html
+++ b/app/game-form.component.html
@@ -1,4 +1,3 @@
-<h2>This shows the game results </h2>
 <!-- <div *ngIf="game">
   <h2>How to play {{game.name}}</h2>
   <div>
@@ -15,21 +14,32 @@
 
 <div class="container">
     <h1>Find a Game</h1>
-    <form>
-      <div class="form-group">
+    <form *ngIf="active" (ngSubmit)="onSubmit()" #gameForm="ngForm">
+      <!-- <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" required>
       </div>
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
         <input type="text" class="form-control">
-      </div>
+      </div> -->
       <div class="form-group">
         <label for="equipment">Equipment</label>
-        <select class="form-control" required>
+        <select class="form-control" required
+          [(ngModel)]="model.equipment"
+          ngControl="equipment" #equipment="ngForm" >
           <option *ngFor="#e of equipment" [value]="e">{{e}}</option>
         </select>
       </div>
+
+<!-- trying to speak to my api
+      <div class="form-group">
+        <label for="games">Equipment</label>
+        <select class="form-control" required>
+          <option *ngFor="#game of games" [value]="game">{{game.equipment}}</option>
+        </select>
+      </div> -->
+
 
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
