--- a/app/games.component.html
+++ b/app/games.component.html
@@ -3,13 +3,13 @@
 <ul class="games">
   <li *ngFor="#game of games"
     (click)="onSelect(game)">
-    <span class="badge">{{game.name}}</span> {{game.description}}
+    <span class="badge">{{game.name | filter}}</span> {{game.description}}
   </li>
 </ul>
 <!-- only show below if a game is selected -->
-<div *ngIf="selectedGame">
+<!-- <div *ngIf="selectedGame">
   <h2>
     {{selectedGame.name | uppercase}} is my game
   </h2>
   <button (click)="gotoForm()">View Forms</button>
-</div>
+</div> -->
