--- a/app/games.component.html
+++ b/app/games.component.html
@@ -1,9 +1,9 @@
 <h1>{{title}}</h1>
 <h2>My Games</h2>
 <ul class="games">
-  <li *ngFor="#game of games"
+  <li *ngFor="#game of games | my_filter"
     (click)="onSelect(game)">
-    <span class="badge">{{game.name | filter}}</span> {{game.description}}
+    <span class="badge">{{ game.name }}</span> {{game.description}}
   </li>
 </ul>
 <!-- only show below if a game is selected -->
