--- a/app/games.component.html
+++ b/app/games.component.html
@@ -1,8 +1,7 @@
 <h1>{{title}}</h1>
 <h2>My Games</h2>
 <ul class="games">
-  <li *ngFor="#game of games | my_filter"
-    (click)="onSelect(game)">
+  <li *ngFor="#game of games">
     <span class="badge">{{ game.name }}</span> {{game.description}}
   </li>
 </ul>
