--- a/app/games.component.html
+++ b/app/games.component.html
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
 <h2>My Games</h2>
+<p>{{_chosenEquip}}</p>
 <ul class="games">
   <li *ngFor="#game of games">
     <span class="badge">{{ game.name }}</span> {{game.description}}
