--- a/app/games.component.html
+++ b/app/games.component.html
@@ -2,7 +2,7 @@
 <h2>My Games</h2>
 <p>{{_chosenEquip}}</p>
 <ul class="games">
-  <li *ngFor="#game of games | my_filter">
+  <li *ngFor="#game of games | my_filter: _chosenEquip">
     <span class="badge">{{ game.name }}</span> {{game.description}}
   </li>
 </ul>
