--- a/app/games.component.html
+++ b/app/games.component.html
@@ -1,8 +1,10 @@
 <h1>{{title}}</h1>
 <h2>My Games</h2>
 <p>{{_chosenEquip}}</p>
+<p>{{_chosenNoise}}</p>
+
 <ul class="games">
-  <li *ngFor="#game of games | equip_filter: _chosenEquip">
+  <li *ngFor="#game of games | noise_filter: _chosenNoise">
     <span class="badge">{{ game.name }}</span> {{game.description}}
   </li>
 </ul>
