--- a/app/games.component.html
+++ b/app/games.component.html
@@ -2,6 +2,7 @@
 <h2>My Games</h2>
 <p>{{_chosenEquip}}</p>
 <p>{{_chosenNoise}}</p>
+<p>{{_chosenTime}}</p>
 
 <ul class="games">
   <li *ngFor="#game of games | equip_filter: _chosenEquip | noise_filter: _chosenNoise">
