now filtering for time. That was hard. using hard coded values for now.

--- a/app/games.component.html
+++ b/app/games.component.html
@@ -5,7 +5,7 @@
 <p>{{_chosenTime}}</p>
 
 <ul class="games">
-  <li *ngFor="#game of games | equip_filter: _chosenEquip | noise_filter: _chosenNoise">
+  <li *ngFor="#game of games | equip_filter: _chosenEquip | noise_filter: _chosenNoise | time_filter: _chosenTime">
     <span class="badge">{{ game.name }}</span> {{game.description}}
   </li>
 </ul>
