made the time-pipe dynamic based on range in the database. oh, yeah

--- a/app/games.component.html
+++ b/app/games.component.html
@@ -7,5 +7,6 @@
 <ul class="games">
   <li *ngFor="#game of games | equip_filter: _chosenEquip | noise_filter: _chosenNoise | time_filter: _chosenTime">
     <span class="badge">{{ game.name }}</span> {{game.description}}
+    {{game.time_range}}
   </li>
 </ul>
