nothing really. comments

--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -14,7 +14,7 @@
 
       <div class="field">
         <label for="noiseInput">Noise Level</label>
-        <select ngControl="noise">
+        <select ngControl="noise" name="noise">
           <option> Outside Voice </option>
           <option> Inside Voice </option>
         </select>
