--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -1,4 +1,4 @@
-<div class="ui raised segment">
+<div class="form-page">
     <h2 class="ui header">Find a Game</h2>
 <!-- ngForm is automatically attached to any form tags I have     -->
     <form #f="ngForm"
