--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,138 @@
-h2 { color: #444; font-weight: lighter; }
-body { margin: 2em; }
-body, input[text], button { color: #888; font-family: Cambria, Georgia; }
-button { padding: 0.2em; font-size: 14px}
-* { font-family: Arial; }
+/*h2 { color: #444; font-weight: lighter; }
+body { margin: 2em; }*/
+/*body, input[text], button { color: #888; font-family: Cambria, Georgia; }*/
+/*button { padding: 0.2em; font-size: 14px}
+* { font-family: Arial; }*/
+
+
+/*body {
+  margin: 0 auto;
+    /*max-width: 600px;*/
+    /*position: absolute;*/
+/*}*/
+
+/*button {
+  margin-top: 20px;
+  font-family: Arial;
+  background-color: green;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+  font-size: 1.5em;
+}*/
+
+/*label {
+  display: inline-block;
+  width: 3em;
+  margin: .5em 0;
+  color: green;
+  font-weight: bold;
+}*/
+/*
+input {
+  height: 2em;
+  font-size: 1em;
+  padding-left: .4em;
+}
+*/
+/*.form-page {
+  margin: auto;
+  width: 960px;
+  text-align: center;
+}
+
+select {
+
+}
+
+button {
+  margin-top: 20px;
+  font-family: Arial;
+  background-color: green;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+  font-size: 1.5em;
+}
+button:hover {
+  background-color: #cfd8dc;
+}*/
+
+/*.selected {
+  background-color: #CFD8DC !important;
+  color: white;
+}
+.games {
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 10em;
+}
+.games li {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  background-color: #EEE;
+  margin: .5em;
+  padding: .3em 0em;
+  /*height: 1.6em;*/
+  /*border-radius: 4px;
+  width: 500px;
+}
+.games li.selected:hover {
+  color: white;
+}
+.games li:hover {
+  color: #607D8B;
+  background-color: #EEE;
+  left: .1em;
+}
+.games .text {
+  position: relative;
+  top: -3px;
+}
+.games .badge {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 0.8em 0.7em 0em 0.7em;
+  background-color: #607D8B;
+  line-height: 1em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 1.8em;
+  margin-right: .8em;
+  border-radius: 4px 0px 0px 4px;
+}*/
+
+/*h1 {
+  font-size: 1.2em;
+  color: #999;
+  margin-bottom: 0;
+}
+h2 {
+  font-size: 2em;
+  margin-top: 0;
+  padding-top: 0;
+}
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #eee;
+  border-radius: 4px;
+}
+nav a:visited, a:link {
+  color: #607D8B;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #CFD8DC;
+}
+nav a.router-link-active {
+  color: #039be5;
+}*/
