--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,12 @@ body { margin: 2em; }*/
 * { font-family: Arial; }*/
 
 
-/*body {
-  margin: 0 auto;
-    /*max-width: 600px;*/
-    /*position: absolute;*/
-/*}*/
+body {
+  margin: auto 0;
+  text-align: center;
+}
 
-/*button {
+button {
   margin-top: 20px;
   font-family: Arial;
   background-color: green;
@@ -20,8 +19,19 @@ body { margin: 2em; }*/
   border-radius: 4px;
   cursor: pointer; cursor: hand;
   font-size: 1.5em;
-}*/
+}
 
+label span {
+  display: block;
+  font-family: Arial;
+  font-size: 1.5em;
+
+}
+
+select {
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
 /*label {
   display: inline-block;
   width: 3em;
