--- a/app/games.component.html
+++ b/app/games.component.html
@@ -16,7 +16,8 @@
       </div>
 
 
-      <span class="badge">{{ game.name }}</span> {{game.description}}
+      <span class="badge">{{ game.name }}</span>
+      <span class="description">{{game.description}}</span>
       {{game.time_range}}
       {{game.num_of_players}}
     </li>
