moved piping data from pipe files to game component. not working right now

--- a/app/games.component.html
+++ b/app/games.component.html
@@ -18,6 +18,7 @@
       <span class="description">{{game.description}}</span>
       {{game.time_range}}
       {{game.num_of_players}}
+      {{game.noise}}
     </li>
   </ul>
 
