trying to filter. not working correctly

--- a/app/games.component.html
+++ b/app/games.component.html
@@ -16,8 +16,8 @@
 
       <span class="badge">{{ game.name }}</span>
       <span class="description">{{game.description}}</span>
-      {{game.time_range}}
-      {{game.num_of_players}}
+      TIME: {{game.time_range}}
+      Players: {{game.num_of_players}}
       {{game.noise}}
     </li>
   </ul>
