changed background photo

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   body {
     margin: auto 0;
     text-align: center;
-    background-image: url("app/running.jpeg");
+    background-image: url("app/converse-fields.jpg");
     background-size: cover;
   }
 }
