--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -1,5 +1,6 @@
 <div class="form-page">
   <a href="http://localhost:3001/auth/facebook">Login with facebook</a>
+  <a href="http://localhost:3001/logout">Logout</a>
     <h2 class="ui header">Find a Game</h2>
 <!-- ngForm is automatically attached to any form tags I have     -->
     <form #f="ngForm"
