--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,23 @@ body {
 .form-page {
 }
 
+h1 {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 3em;
+  color: #5d4124;
+}
+
+h2 {
+  font-family: 'Muli', sans-serif;
+  color: #5988b9;
+  font-size: 2.2em;
+  margin: 5px auto;
+}
 
 button {
   margin-top: 20px;
-  font-family: Arial;
-  background-color: green;
+  font-family: 'Muli', sans-serif;
+  background-color: #5988b9;
   border: none;
   padding: 15px 30px;
   border-radius: 4px;
@@ -47,8 +59,9 @@ button {
 
 label span {
   display: block;
-  font-family: Arial;
+  font-family: 'Muli', sans-serif;
   font-size: 1.5em;
+  color: #5d4124;
 
 }
 
