--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -1,4 +1,6 @@
 <div class="form-page">
+  <h1 class="title">Back Pocket Games</h1>
+
   <a href="http://localhost:3001/auth/facebook">Login with facebook</a>
   <a href="http://localhost:3001/logout">Logout</a>
     <h2 class="ui header">Find a Game</h2>
