--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ a:hover {
 body {
   margin: auto 0;
   text-align: center;
+  background-color: #5988b9;
+
 }
 /*large display*/
 @media screen and (min-width: 45.5em) {
@@ -37,7 +39,6 @@ body {
 }
 /*large display*/
 .form-page {
-  background-color: white;
   margin: 0 auto;
   padding-top: 1em;
   padding-bottom: 2em;
@@ -47,19 +48,20 @@ body {
 @media screen and (min-width: 28.75em) {
   .form-page {
     width: 70%;
-
+    background-color: white;
   }
 }
 
 @media screen and (min-width: 45.5em) {
   .form-page {
     width: 50%;
+    background-color: white;
   }
 }
 
 h2 {
   font-family: 'Muli', sans-serif;
-  color: #5988b9;
+  color: grey;
   font-size: 2.2em;
   margin: 5px auto;
 }
@@ -67,7 +69,7 @@ h2 {
 button {
   margin-top: 20px;
   font-family: 'Muli', sans-serif;
-  background-color: #5988b9;
+  background-color: grey;
   border: none;
   padding: 15px 30px;
   border-radius: 4px;
