random game is being generated when user clicks on 'desperate' button

--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -41,7 +41,7 @@
       </div>
 
       <button type="submit" name="action" value="go" class="go-button">Go!</button>
-      <button type="submit" name="action" value="lucky" class="lucky">I'm Feeling Desperate</button>
-
+      <!-- <button type="submit" name="action" value="lucky" class="lucky">I'm Feeling Desperate</button> -->
+      <a class="lucky" href="games?type=random">I'm Feeling Desperate</a>
     </form>
   </div>
