--- a/app/games.component.html
+++ b/app/games.component.html
@@ -2,11 +2,21 @@
 
 <a class="back" href="/">back</a>
 
-<div *ngIf="pendingRequest">
-  <h1>Wait for it...</h1>
-</div>
+  <div *ngIf="pendingRequest">
+    <h1>Wait for it...</h1>
+  </div>
 
-  <div class="no-games-container" *ngIf="!pendingRequest && matchingGames.length === 0">
+  <div *ngIf="!pendingRequest && desperate">
+    <h2>Play this!</h2>
+    <ul class="games">
+      <li>
+        <span class="game-name">{{ randomGame.name }}</span>
+        <span class="description">{{randomGame.description}}</span>
+    </li>
+    </ul>
+  </div>
+
+  <div class="no-games-container" *ngIf="!pendingRequest && matchingGames.length === 0 && !desperate">
     <h2>No games match your search.</h2>
     <h2>How about a dance party?</h2>
     <p class="jams">Here are some overplayed jams that children love:</p>
@@ -22,8 +32,8 @@
     <div class="songlink">
       <a class="youtube" href="https://youtu.be/M11SvDtPBhA">Party In The U.S.A. - Miley Cyrus</a>
     </div>
-
   </div>
+
 
   <div *ngIf="!pendingRequest && matchingGames.length > 0">
     <h2>Try one of these:</h2>
