form page styles

--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -40,8 +40,7 @@
         </select>
       </div>
 
-      <button type="submit" name="action" value="go" class="go-button">Go!</button>
-      <!-- <button type="submit" name="action" value="lucky" class="lucky">I'm Feeling Desperate</button> -->
-      <a class="lucky" href="games?type=random">I'm Feeling Desperate</a>
+      <button type="submit" name="action" value="go" class="button">Go!</button>
+      <a class="button" href="games?type=random">I'm Feeling Desperate</a>
     </form>
   </div>
