--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ body { margin: 2em; }*/
   border-radius: 4px;
   margin-top: -10px;
 }
+@media screen and (min-width: 45.5em) {
+  .title {
+    background-color: white;
+  }
+}
+
 a {
   text-decoration: none;
   font-family: 'Muli', sans-serif;
@@ -29,8 +35,6 @@ a:hover {
 body {
   margin: auto 0;
   text-align: center;
-  /*background-color: #5988b9;*/
-
 }
 /*large display*/
 @media screen and (min-width: 45.5em) {
@@ -178,6 +182,63 @@ select {
 
 .youtube:hover {
   color: hotpink;
+}
+
+.loader:before,
+.loader:after,
+.loader {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  font-size: 10px;
+  margin: 80px auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #ffffff;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #ffffff;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #ffffff;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #ffffff;
+  }
 }
 /*label {
   display: inline-block;
