styling rando button and large screen games page

--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -41,6 +41,8 @@
       </div>
 
       <button type="submit" name="action" value="go" class="button">Go!</button>
-      <a class="button" href="games?type=random">I'm Feeling Desperate</a>
+      <a class="button" href="games?type=random">
+        <span class="button-text">Give me anything!</span>
+        I'm Feeling Desperate</a>
     </form>
   </div>
