--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,9 @@ h2 {
   cursor: pointer; cursor: hand;
   font-size: 1.5em;
   display: block;
+  -webkit-box-shadow: 0px 0px 21px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 21px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 21px 0px #43a101;
 }
 
 .button:hover {
@@ -102,6 +105,10 @@ a.button {
   background-image: none;
   background-color: #f9cc68;
   font-size: 1.3em;
+  -webkit-box-shadow: 0px 0px 21px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 21px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 21px 0px #f9cc68;
+
 }
 
 a.button:hover {
