styled up the no-games page

--- a/app/games.component.html
+++ b/app/games.component.html
@@ -21,9 +21,9 @@
   </div>
 
   <div class="no-games-container" *ngIf="!pendingRequest && matchingGames.length === 0 && !desperate">
-    <h2>No games match your search.</h2>
-    <h2>How about a dance party?</h2>
-    <p class="jams">Here are some overplayed jams that children love:</p>
+    <p class="no-games">No games match your search.</p>
+    <h2 class="dance-party">How about a dance party?</h2>
+    <p class="no-games">Here are some overplayed jams that children love:</p>
     <div class="songlink">
       <a class="youtube" href="https://youtu.be/y6Sxv-sUYtM" target="_blank">Happy - Pharrell Williams</a>
     </div>
